# hive-news

./: .cursorrules  .dockerignore  .env  .gitignore  .image-tracker-scienceai.json  .prettierignore  AGENTS.md  ANALISE_FONTES_NOVAS.md  CHANGELOG.md  COMANDOS_ANALISE_DISCO.md  COMANDOS_REBUILD.md  COMPLETE_SESSION_REPORT.md  CORRECOES_URLS_APLICADAS.md  Cargo.toml  DASHBOARD_AUTH_SUMMARY.md  DEPLOY_CHECKLIST.md  DEPLOY_COMMANDS.md  EXPLICACAO_77GB.md  FLUXO_FEATURED_HIDDEN.md  FLUXO_FEATURED_HIDDEN_VERIFICACAO.md  HARDCODED_VALUES_ANALYSIS.md  INSTALAR_SUDO.md  PIPELINE_TEST_RESULTS.md  PROBLEMA_HIDE_FEATURED_RELATORIO.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  PROJECT_READY.md  README.md  README_DEPLOYMENT.md  REBUILD.md  REBUILD_WITHOUT_CACHE.md  RELATORIO_NOVAS_FONTES.md  SECURITY_AUDIT_REPORT.md  SESSION_COMPLETE.md  SITES_STATUS.md  STRUCTURE.md  TEST_COLLECTOR.md  articles_registry.backup.json  articles_registry.json  articles_registry.json.backup.orphan_cleanup  (+44 more)
compression-prompt-main/: .gitignore  AGENTS.md  CHANGELOG.md  (+1 more)
news-backend/: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  WRITER_FLOW_VERIFICATION.md  WRITER_ORCHESTRATOR_AUDIT.md  adaptive_test_results.json  collectors_config.json  crop-lateral-borders.js  crop-transparent-borders.js  google_ai_feed_sample.xml  google_ai_sample.xml  intelligent_test_results.json  loop_stats.json  package-lock.json  package.json  pipeline_test_results.json  resize-to-1000x1000.js  stretch-to-1000x1000.js  system_config.json  system_config.json.backup  users.json
news-backend/examples/: analyze_pdf_rejection.rs  apply_adaptive_fixes.rs  generate_optimized_config.rs  test_adaptive_access.rs  test_all_collectors.rs  test_all_strategies.rs  test_collectors.rs  test_full_pipeline.rs
news-backend/js/: scraper.js
news-backend/migrations/: 001_create_tables.sql  002_create_raw_documents.sql  003_create_filtered_documents.sql
news-backend/scripts/: README.md
news-backend/src/: main.rs
news-backend/src/collectors/: README.md  arxiv_collector.rs  content_cleaner.rs  course_collector.rs  html_collector.rs  mod.rs  pmc_collector.rs  rss_collector.rs  semantic_scholar_collector.rs  template_collector.rs  web_parser.rs
news-backend/src/config/: api_keys.rs  collector_config.rs  mod.rs
news-backend/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
news-backend/src/filter/: authors.rs  cache.rs  categorizer.rs  experiments.rs  fake_detector.rs  mod.rs  news_filter.rs  parser.rs  pipeline.rs  scorer.rs  source_detector.rs  validator.rs
news-backend/src/middleware/: auth.rs
news-backend/src/models/: course.rs  mod.rs  raw_document.rs
news-backend/src/routes/: airesearch.rs  auth.rs  collector.rs  collectors.rs  courses.rs  logs.rs  mod.rs  pages.rs  promo.rs  prompts.rs  scienceai.rs  sites.rs  sources.rs  subscribe.rs  system.rs
news-backend/src/services/: auth_service.rs  collector_service.rs  loop_manager.rs  mod.rs  page_service.rs  scheduler_service.rs
news-backend/src/utils/: article_registry.rs  config_manager.rs  env_sync.rs  jwt.rs  mod.rs  path_resolver.rs  site_config_manager.rs  sources_registry.rs
news-backend/src/writer/: content_generator.rs  deepseek_client.rs  file_writer.rs  illustrator.rs  image_extractor.rs  keyword_extractor.rs  mod.rs  news_writer.rs  pixabay_client.rs  prompt_compressor.rs  prompts.rs
news-backend/src/writer/prompts/: blog_prompt_default.txt
news-backend/tauri-app/src-tauri/: tauri.conf.json
(+11366 files in other folders)
