[package]
name = "news-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_single_paper"
path = "src/bin/test_single_paper.rs"

[[bin]]
name = "migrate-registry"
path = "src/bin/migrate_registry.rs"

[[bin]]
name = "sync-env-from-config"
path = "src/bin/sync_env_from_config.rs"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies"] }
url = "2.5"
regex = "1.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# Scheduler
tokio-cron-scheduler = "0.9"

# Filter dependencies
lopdf = "0.34"
rayon = "1.10"
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.5"
urlencoding = "2.1"

# Image processing (for crop)
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tokio-test = "0.4"

