[package]
name = "news-backend"
version = "0.1.0"
edition = "2024"
default-run = "news-backend"

[[bin]]
name = "test_single_paper"
path = "src/bin/test_single_paper.rs"

[[bin]]
name = "migrate-registry"
path = "src/bin/migrate_registry.rs"

[[bin]]
name = "sync-env-from-config"
path = "src/bin/sync_env_from_config.rs"

[[bin]]
name = "sync-collectors-config"
path = "src/bin/sync_collectors_config.rs"

[[bin]]
name = "clean-articles"
path = "src/bin/clean_articles.rs"

[[bin]]
name = "fix-wrong-destinations"
path = "src/bin/fix_wrong_destinations.rs"

[[bin]]
name = "rename-article-folders"
path = "src/bin/rename_article_folders.rs"

[[bin]]
name = "fix-unknown-categories"
path = "src/bin/fix_unknown_categories.rs"

[[bin]]
name = "servers"
path = "src/bin/servers.rs"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies"] }
url = "2.5"
regex = "1.10"
tempfile = "3.10"

# RSS/Atom parsing
rss = "2.0"
atom_syndication = "0.12"

# HTML scraping
scraper = "0.21"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# Scheduler
tokio-cron-scheduler = "0.9"

# Filter dependencies
lopdf = "0.34"
rayon = "1.10"
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.5"
urlencoding = "2.1"

# Image processing (for crop)
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tokio-test = "0.4"

